--- a/web.config
+++ b/web.config
@@ -1,10 +1,20 @@
 <configuration>
   <system.webServer>
 
-
+    <webSocket enabled="false" />
     <handlers>
       <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
     </handlers>
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <remove segment="bin"/>
+        </hiddenSegments>
+      </requestFiltering>
+    </security>
+
+    <!-- Make sure error responses are left untouched -->
+    <httpErrors existingResponse="PassThrough" />
     
     <!-- 
       the iisnode section configures the behavior of the node.js IIS module 
